# Portals2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  game.py  input.py  install_dependencies.sh  main.py  objects.py  physics.py  portals.py  renderer.py  requirements.txt  settings.py  setup.sh  ui.py  uninstall_dependencies.sh  utils.py
assets/textures/: README.md
cmake/: FindBox2D.cmake
docs/: architecture.md  core_systems.md  design.md  design_plan.md  gameplay.md  physics.md  portals.md  technical.md
src/core/: Game.cpp  Game.h  GameController.cpp  GameController.h  GameLoop.cpp  GameLoop.h  InputManager.cpp  InputManager.h  ObjectManager.cpp  ObjectManager.h  game_loop.py  input_manager.py  main.cpp  object_manager.py
src/entities/: DynamicObject.cpp  DynamicObject.h  GameEntity.cpp  GameEntity.h  Portal.cpp  Portal.h
src/game_objects/: game_object.py  portal.py
src/physics/: CollisionHandler.cpp  CollisionHandler.h  PhysicsEngine.cpp  PhysicsEngine.h  PortalPhysics.cpp  PortalPhysics.h  physics_engine.py
src/rendering/: PortalRenderer.cpp  PortalRenderer.h  Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h  renderer.py
src/ui/: Button.cpp  Button.h  Slider.cpp  Slider.h  UIManager.cpp  UIManager.h  ui_manager.py
src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h  Math.cpp  Math.h  logger.py
